--- a/app/src/main/res/layout/fragment_edit_restaurant.xml
+++ b/app/src/main/res/layout/fragment_edit_restaurant.xml
@@ -1,14 +1,316 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
+    android:id="@+id/scrollview_edit_restaurant"
+    android:background="@drawable/shape_round_white"
     tools:context=".restaurant.Fragment_Edit_Restaurant">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-</FrameLayout>
+
+            <TextView
+                android:id="@+id/textview_edit_restaurant_alert_message"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:text=""
+
+                android:textAlignment="center"
+                android:textColor="@color/red"
+                android:textSize="@dimen/text_size_medium"
+                android:textStyle="bold"
+
+                android:visibility="invisible"
+                app:layout_constraintBottom_toTopOf="@+id/btn_edit_restaurant_create"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias=".5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/spinner_edit_restaurant_category"
+
+
+                app:layout_constraintVertical_bias=".5"
+                app:layout_constraintWidth_percent=".8" />
+
+            <EditText
+                android:id="@+id/edittext_edit_restaurant_name"
+
+                android:layout_width="0dp"
+                app:layout_constraintWidth_percent=".8"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/text_size_medium"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+
+                app:layout_constraintVertical_bias=".05"
+                app:layout_constraintHorizontal_bias=".3"
+
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+
+                android:visibility="visible"
+
+                android:hint="@string/restuarant_name"/>
+
+
+
+
+            <EditText
+                android:id="@+id/edittext_edit_restaurant_description"
+
+                android:textSize="@dimen/text_size_medium"
+
+                android:layout_width="0dp"
+                app:layout_constraintWidth_percent=".8"
+                android:layout_height="wrap_content"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edittext_edit_restaurant_name"
+
+                app:layout_constraintVertical_bias=".02"
+                app:layout_constraintHorizontal_bias=".3"
+                android:maxLines="5"
+                android:lines="5"
+                android:minLines="5"
+
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+
+                android:hint="@string/restuarant_description"/>
+
+
+
+            <EditText
+                android:id="@+id/edittext_edit_restaurant_email"
+
+                android:textSize="@dimen/text_size_medium"
+                android:layout_width="0dp"
+                app:layout_constraintWidth_percent=".8"
+                android:layout_height="wrap_content"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edittext_edit_restaurant_description"
+
+                app:layout_constraintVertical_bias=".02"
+                app:layout_constraintHorizontal_bias=".3"
+
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+
+                android:hint="@string/restuarant_email"/>
+
+            <EditText
+                android:id="@+id/edittext_edit_restaurant_address"
+                android:textSize="@dimen/text_size_medium"
+                android:layout_width="0dp"
+                app:layout_constraintWidth_percent=".8"
+                android:layout_height="wrap_content"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edittext_edit_restaurant_email"
+
+                app:layout_constraintVertical_bias=".02"
+                app:layout_constraintHorizontal_bias=".3"
+
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+
+                android:hint="@string/restuarant_address"/>
+
+            <EditText
+                android:id="@+id/edittext_edit_restaurant_phone"
+
+                android:textSize="@dimen/text_size_medium"
+                android:layout_width="0dp"
+                app:layout_constraintWidth_percent=".8"
+                android:layout_height="wrap_content"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edittext_edit_restaurant_address"
+
+                app:layout_constraintVertical_bias=".02"
+                app:layout_constraintHorizontal_bias=".3"
+
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+
+                android:hint="@string/restuarant_phone"/>
+
+            <androidx.appcompat.widget.AppCompatSpinner
+                android:id="@+id/spinner_edit_restaurant_city"
+                android:layout_width="0dp"
+                app:layout_constraintWidth_percent=".8"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edittext_edit_restaurant_phone"
+                android:spinnerMode="dropdown"
+                android:prompt="@string/location"
+
+                android:textSize="@dimen/text_size_medium"
+
+
+                app:layout_constraintVertical_bias=".02"
+                app:layout_constraintHorizontal_bias=".3"
+
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:visibility="invisible"
+                >
+
+            </androidx.appcompat.widget.AppCompatSpinner>
+
+            <TextView
+                android:id="@+id/textview_edit_restaurant_loading_cities"
+                android:layout_width="0dp"
+                app:layout_constraintWidth_percent=".8"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edittext_edit_restaurant_phone"
+                android:textAlignment="center"
+
+
+                android:text="@string/loading_cities"
+
+                android:textSize="@dimen/text_size_medium"
+
+
+                app:layout_constraintVertical_bias=".1"
+                app:layout_constraintHorizontal_bias=".3"
+
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp">
+
+            </TextView>
+
+            <androidx.appcompat.widget.AppCompatSpinner
+                android:id="@+id/spinner_edit_restaurant_category"
+                android:layout_width="0dp"
+                app:layout_constraintWidth_percent=".8"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textview_edit_restaurant_loading_cities"
+                android:spinnerMode="dropdown"
+                android:prompt="@string/location"
+
+                android:textSize="@dimen/text_size_medium"
+
+
+                app:layout_constraintVertical_bias=".1"
+                app:layout_constraintHorizontal_bias=".3"
+
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:visibility="invisible"
+                >
+
+            </androidx.appcompat.widget.AppCompatSpinner>
+
+            <TextView
+                android:id="@+id/textview_edit_restaurant_loading_categories"
+                android:layout_width="0dp"
+                app:layout_constraintWidth_percent=".8"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textview_edit_restaurant_loading_cities"
+                android:textAlignment="center"
+
+
+                android:text="@string/loading_categories"
+
+                android:textSize="@dimen/text_size_medium"
+
+
+                app:layout_constraintVertical_bias=".1"
+                app:layout_constraintHorizontal_bias=".3"
+
+                android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp">
+
+            </TextView>
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_edit_restaurant_create"
+                style="@style/main_button_style"
+                android:layout_width="0dp"
+
+                android:layout_height="wrap_content"
+                android:text="@string/create"
+
+                app:cornerRadius="@dimen/button_radius"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+
+                app:layout_constraintHorizontal_bias=".5"
+                app:layout_constraintStart_toStartOf="parent"
+
+                app:layout_constraintTop_toBottomOf="@+id/textview_edit_restaurant_alert_message"
+                app:layout_constraintVertical_bias=".5"
+                app:layout_constraintWidth_percent=".8"
+                android:layout_margin="50dp"
+
+                />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_edit_restaurant_cancel"
+                style="@style/button_secondary"
+                android:layout_width="0dp"
+
+                android:layout_height="wrap_content"
+                android:text="@string/cancel"
+
+                app:cornerRadius="@dimen/button_radius"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+
+                app:layout_constraintHorizontal_bias=".5"
+                app:layout_constraintStart_toStartOf="parent"
+
+                app:layout_constraintTop_toBottomOf="@+id/btn_edit_restaurant_create"
+                app:layout_constraintVertical_bias="1"
+                app:layout_constraintWidth_percent=".8"
+                android:layout_margin="20dp"
+
+                />
+
+
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
