--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
-        android:id="@+id/registerform_scrollview"
+        android:id="@+id/scrollview_register"
         >
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,14 +23,14 @@
 
 
             <TextView
-                android:id="@+id/textview_registerform_alert_message"
+                android:id="@+id/textview_edit_restaurant_alert_message"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintWidth_percent=".8"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
 
-                app:layout_constraintBottom_toTopOf="@+id/edittext_registerform_email"
+                app:layout_constraintBottom_toTopOf="@+id/edittext_edit_restaurant_name"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -48,7 +48,7 @@
                 android:visibility="invisible"/>
 
             <EditText
-                android:id="@+id/edittext_registerform_email"
+                android:id="@+id/edittext_edit_restaurant_name"
 
                 android:layout_width="0dp"
                 app:layout_constraintWidth_percent=".8"
@@ -80,7 +80,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintWidth_percent=".8"
-                app:layout_constraintBottom_toTopOf="@+id/edittext_registerform_password"
+                app:layout_constraintBottom_toTopOf="@+id/edittext_edit_restaurant_description"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="parent"
@@ -91,7 +91,7 @@
                 android:visibility="gone"/>
 
             <EditText
-                android:id="@+id/edittext_registerform_password"
+                android:id="@+id/edittext_edit_restaurant_description"
 
                 android:textSize="@dimen/text_size_medium"
 
@@ -102,7 +102,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/edittext_registerform_email"
+                app:layout_constraintTop_toBottomOf="@+id/edittext_edit_restaurant_name"
 
                 app:layout_constraintVertical_bias=".02"
                 app:layout_constraintHorizontal_bias=".3"
@@ -123,7 +123,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/edittext_registerform_email"
+                app:layout_constraintTop_toBottomOf="@+id/edittext_edit_restaurant_name"
 
                 app:layout_constraintVertical_bias=".02"
                 app:layout_constraintHorizontal_bias=".3"
@@ -132,7 +132,7 @@
 
 
             <EditText
-                android:id="@+id/edittext_registerform_name"
+                android:id="@+id/edittext_edit_restaurant_email"
 
                 android:textSize="@dimen/text_size_medium"
                 android:layout_width="0dp"
@@ -142,7 +142,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/edittext_registerform_password"
+                app:layout_constraintTop_toBottomOf="@+id/edittext_edit_restaurant_description"
 
                 app:layout_constraintVertical_bias=".02"
                 app:layout_constraintHorizontal_bias=".3"
@@ -154,7 +154,7 @@
                 android:hint="@string/name"/>
 
             <EditText
-                android:id="@+id/edittext_registerform_surnamename"
+                android:id="@+id/edittext_edit_restaurant_address"
                 android:textSize="@dimen/text_size_medium"
                 android:layout_width="0dp"
                 app:layout_constraintWidth_percent=".8"
@@ -163,7 +163,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/edittext_registerform_name"
+                app:layout_constraintTop_toBottomOf="@+id/edittext_edit_restaurant_email"
 
                 app:layout_constraintVertical_bias=".02"
                 app:layout_constraintHorizontal_bias=".3"
@@ -175,7 +175,7 @@
                 android:hint="@string/surname"/>
 
             <EditText
-                android:id="@+id/edittext_registerform_username"
+                android:id="@+id/edittext_edit_restaurant_phone"
 
                 android:textSize="@dimen/text_size_medium"
                 android:layout_width="0dp"
@@ -185,7 +185,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/edittext_registerform_surnamename"
+                app:layout_constraintTop_toBottomOf="@+id/edittext_edit_restaurant_address"
 
                 app:layout_constraintVertical_bias=".02"
                 app:layout_constraintHorizontal_bias=".3"
@@ -197,14 +197,14 @@
                 android:hint="@string/username"/>
 
             <androidx.appcompat.widget.AppCompatSpinner
-            android:id="@+id/spinner_registerform_location"
+            android:id="@+id/spinner_edit_restaurant_city"
             android:layout_width="0dp"
             app:layout_constraintWidth_percent=".8"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edittext_registerform_username"
+            app:layout_constraintTop_toBottomOf="@+id/edittext_edit_restaurant_phone"
             android:spinnerMode="dropdown"
             android:prompt="@string/location"
 
@@ -223,14 +223,14 @@
         </androidx.appcompat.widget.AppCompatSpinner>
 
             <TextView
-                android:id="@+id/textview_registerform_retrieve_cities"
+                android:id="@+id/textview_edit_restaurant_loading_cities"
                 android:layout_width="0dp"
                 app:layout_constraintWidth_percent=".8"
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/edittext_registerform_username"
+                app:layout_constraintTop_toBottomOf="@+id/edittext_edit_restaurant_phone"
                 android:textAlignment="center"
 
 
@@ -261,7 +261,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/edittext_registerform_username"
+                app:layout_constraintTop_toBottomOf="@+id/edittext_edit_restaurant_phone"
 
                 app:layout_constraintVertical_bias=".02"
                 app:layout_constraintHorizontal_bias=".3"
@@ -297,7 +297,7 @@
             <com.google.android.material.button.MaterialButton
                 style="@style/main_button_style"
                 app:cornerRadius="@dimen/button_radius"
-                android:id="@+id/button_registerform_register"
+                android:id="@+id/btn_edit_restaurant_create"
 
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -318,7 +318,7 @@
             <com.google.android.material.button.MaterialButton
                 style="@style/button_secondary"
                 app:cornerRadius="@dimen/button_radius"
-                android:id="@+id/button_registerform_cancel"
+                android:id="@+id/btn_edit_restaurant_cancel"
 
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -334,7 +334,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias=".5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/button_registerform_register"
+                app:layout_constraintTop_toBottomOf="@+id/btn_edit_restaurant_create"
                 app:layout_constraintWidth_percent=".8" />
 
 
