--- a/app/src/main/res/layout-land/fragment_restaurant_client.xml
+++ b/app/src/main/res/layout-land/fragment_restaurant_client.xml
@@ -23,7 +23,7 @@
                 android:layout_width="@dimen/account_image_size"
                 android:layout_height="@dimen/account_image_size"
                 app:cardCornerRadius="50dp"
-                app:layout_constraintBottom_toBottomOf="@+id/view2"
+                app:layout_constraintBottom_toBottomOf="@+id/view2_restaurant_client"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias=".5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +52,7 @@
             </androidx.cardview.widget.CardView>
 
             <View
-                android:id="@+id/view2"
+                android:id="@+id/view2_restaurant_client"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:background="@color/red"
@@ -79,7 +79,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/view2"
+                app:layout_constraintTop_toBottomOf="@+id/view2_restaurant_client"
                 app:layout_constraintVertical_bias=".1"/>
 
             <View
