--- a/app/src/main/res/layout/activity_create_restaurant.xml
+++ b/app/src/main/res/layout/activity_create_restaurant.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".restaurant.Activity_Create_Restaurant">
 
+    <fragment
+        android:id="@+id/fragment"
+        android:name="com.poma.restaurant.restaurant.Fragment_Edit_Restaurant"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
