--- a/app/src/main/res/layout/fragment_edit_restaurant.xml
+++ b/app/src/main/res/layout/fragment_edit_restaurant.xml
@@ -20,7 +20,7 @@
                 android:layout_height="wrap_content"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:text=""
+                android:text="errore qualcosa"
 
                 android:textAlignment="center"
                 android:textColor="@color/red"
@@ -33,7 +33,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias=".5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/spinner_edit_restaurant_category"
+                app:layout_constraintTop_toBottomOf="@+id/chipCpp2"
 
 
                 app:layout_constraintVertical_bias=".5"
@@ -141,6 +141,7 @@
                 android:id="@+id/edittext_edit_restaurant_phone"
 
                 android:textSize="@dimen/text_size_medium"
+                android:inputType="number"
                 android:layout_width="0dp"
                 app:layout_constraintWidth_percent=".8"
                 android:layout_height="wrap_content"
@@ -174,7 +175,7 @@
                 android:textSize="@dimen/text_size_medium"
 
 
-                app:layout_constraintVertical_bias=".02"
+                app:layout_constraintVertical_bias=".1"
                 app:layout_constraintHorizontal_bias=".3"
 
                 android:paddingLeft="20dp"
@@ -226,7 +227,7 @@
                 android:textSize="@dimen/text_size_medium"
 
 
-                app:layout_constraintVertical_bias=".1"
+                app:layout_constraintVertical_bias=".05"
                 app:layout_constraintHorizontal_bias=".3"
 
                 android:paddingLeft="20dp"
@@ -254,7 +255,7 @@
                 android:textSize="@dimen/text_size_medium"
 
 
-                app:layout_constraintVertical_bias=".1"
+                app:layout_constraintVertical_bias=".05"
                 app:layout_constraintHorizontal_bias=".3"
 
                 android:paddingLeft="20dp"
@@ -262,6 +263,81 @@
                 android:paddingBottom="10dp">
 
             </TextView>
+
+            <EditText
+                android:id="@+id/edittext_edit_restaurant_tags"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="@string/restuarant_tags"
+                android:paddingLeft="20dp"
+                android:inputType="text"
+                android:imeOptions="actionSend"
+
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:textSize="@dimen/text_size_medium"
+                app:layout_constraintBottom_toBottomOf="parent"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias=".3"
+
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/spinner_edit_restaurant_category"
+                app:layout_constraintVertical_bias=".1"
+
+                app:layout_constraintWidth_percent=".8" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chipCpp1"
+                style="@style/Widget.MaterialComponents.Chip.Entry"
+                android:checked="false"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:text="tag1"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edittext_edit_restaurant_tags"
+                tools:ignore="MissingConstraints"
+                app:layout_constraintVertical_bias=".1"
+                app:layout_constraintHorizontal_bias=".1"
+                />
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chipCpp2"
+                style="@style/Widget.MaterialComponents.Chip.Entry"
+                android:checked="false"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:text="tag2"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edittext_edit_restaurant_tags"
+                tools:ignore="MissingConstraints"
+                app:layout_constraintVertical_bias=".25"
+                app:layout_constraintHorizontal_bias=".5"
+                />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chipCpp3"
+                style="@style/Widget.MaterialComponents.Chip.Entry"
+                android:checked="false"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="false"
+                android:text="tag3"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edittext_edit_restaurant_tags"
+                tools:ignore="MissingConstraints"
+                app:layout_constraintVertical_bias=".1"
+                app:layout_constraintHorizontal_bias=".9"
+                />
+
 
 
             <com.google.android.material.button.MaterialButton
