--- a/app/src/main/res/layout/fragment_edit_restaurant.xml
+++ b/app/src/main/res/layout/fragment_edit_restaurant.xml
@@ -20,7 +20,7 @@
                 android:layout_height="wrap_content"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:text="errore qualcosa"
+                android:text=""
 
                 android:textAlignment="center"
                 android:textColor="@color/red"
