--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -75,5 +75,8 @@
     <!-- star-->
     <dimen name="star">20dp</dimen>
 
+    <!-- title review-->
+    <dimen name="title_review">80dp</dimen>
+
 
 </resources>
