--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -46,8 +46,29 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintVertical_bias="0.1"
-                app:layout_constraintTop_toBottomOf="@+id/btn_test_crea_ristorante" />
+                app:layout_constraintTop_toBottomOf="@+id/btn_test_crea_ristorante"
+                app:layout_constraintVertical_bias="0.1" />
+
+            <Button
+                android:id="@+id/btn_test_create_review"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="61dp"
+                android:text="Review"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btn_test_crea_favourite" />
+
+            <Button
+                android:id="@+id/btn_go_to_review"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Go to review"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.493"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btn_test_create_review" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
