--- a/app/src/main/res/layout/card_review.xml
+++ b/app/src/main/res/layout/card_review.xml
@@ -1,6 +1,355 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.cardview.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="8dp"
+        app:cardMaxElevation="10dp"
+        app:cardPreventCornerOverlap="true"
+        app:cardUseCompatPadding="true"
+        android:id="@+id/cardview_review"
+        tools:ignore="MissingConstraints,MissingDefaultResource">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <!--
+            In the above cardview widget
+            cardelevation property will give elevation to your card view
+            card corner radius will provide radius to your card view
+            card background color will give background color to your card view
+            card max elevation will give the cardview maximum elevation
+            card prevent corner overlap will add padding to CardView on v20 and
+            before to prevent intersections between the Card content and rounded corners.
+            card use compact padding will add padding in API v21+ as well to have the same
+            measurements with previous versions.
+        -->
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+            <ProgressBar
+                android:id="@+id/progress_bar_cardreview"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:padding="20dp"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView_cardreview"
+                app:layout_constraintEnd_toEndOf="@+id/appCompatImageView_cardreview"
+                app:layout_constraintStart_toStartOf="@+id/appCompatImageView_cardreview"
+                app:layout_constraintTop_toTopOf="@+id/appCompatImageView_cardreview" />
+
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/appCompatImageView_cardreview"
+                android:layout_width="@dimen/image_view_list"
+                android:layout_height="@dimen/image_view_list"
+                android:padding="10dp"
+                android:src="@drawable/ic_baseline_account_circle_24"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias=".05"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias=".05" />
+
+            <TextView
+                android:id="@+id/textview_username_cardreview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Username"
+
+                android:textSize="@dimen/text_size_medium"
+                android:textStyle="bold"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/progress_bar_cardreview"
+                app:layout_constraintTop_toTopOf="parent"
+
+                app:layout_constraintVertical_bias=".1"
+                app:layout_constraintHorizontal_bias=".2"
+                />
+
+            <androidx.appcompat.widget.AppCompatRatingBar
+                android:id="@+id/ratingbar_cardreview"
+                android:layout_width="wrap_content"
+
+                android:layout_height="wrap_content"
+                android:layout_marginTop="1dp"
+                android:theme="@style/RatingBar"
+
+
+                android:rating="0"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.516"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/appCompatImageView_cardreview"
+                app:layout_constraintVertical_bias="0.1" />
+
+            <TextView
+                android:id="@+id/textview_load_more_cardreview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="LOAD MORE ..."
+
+                android:textSize="@dimen/text_size_medium"
+                android:textStyle="bold"
+                android:layout_marginBottom="10dp"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias=".5"
+
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ratingbar_cardreview"
+                app:layout_constraintVertical_bias=".1" />
+
+            <TextView
+                android:id="@+id/textview_location_cardreview"
+                android:layout_width="@dimen/title_review"
+                android:layout_height="wrap_content"
+                android:text="Location:"
+
+                android:textSize="@dimen/text_size_medium"
+                android:textStyle="bold"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ratingbar_cardreview"
+
+                app:layout_constraintVertical_bias=".1"
+                app:layout_constraintHorizontal_bias=".05"
+                android:visibility="visible"
+                />
+
+            <TextView
+                android:id="@+id/textview_location_content_cardreview"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="descrizione di adjfeudsndfjwccn dfjdneffnfddfffjdfjddkskdnffnfisdjfnsdjd"
+
+                android:textSize="@dimen/text_size_small"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias=".5"
+                app:layout_constraintStart_toEndOf="@id/textview_location_cardreview"
+
+                app:layout_constraintTop_toBottomOf="@+id/ratingbar_cardreview"
+                app:layout_constraintVertical_bias=".1"
+                app:layout_constraintWidth_percent=".7"
+                android:visibility="visible"/>
+
+            <View
+                android:id="@+id/view1_cardreview"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+
+                android:background="@color/grey"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textview_location_content_cardreview"
+
+                app:layout_constraintVertical_bias="0.05"
+                app:layout_constraintWidth_percent=".6"
+                app:layout_constraintHorizontal_bias=".8"
+
+
+                />
+
+
+            <TextView
+                android:id="@+id/textview_service_cardreview"
+                android:layout_width="@dimen/title_review"
+                android:layout_height="wrap_content"
+                android:text="Service:"
+
+                android:textSize="@dimen/text_size_medium"
+                android:textStyle="bold"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/view1_cardreview"
+
+                app:layout_constraintVertical_bias=".1"
+                app:layout_constraintHorizontal_bias=".05"
+                />
+
+            <TextView
+                android:id="@+id/textview_service_content_cardreview"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="descrizione di adjfeudsndfjwccn dfjdneffnfddfffjdfjddkskdnffnfisdjfnsdjd"
+
+                android:textSize="@dimen/text_size_small"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.555"
+                app:layout_constraintStart_toEndOf="@id/textview_service_cardreview"
+                app:layout_constraintTop_toBottomOf="@+id/view1_cardreview"
+                app:layout_constraintVertical_bias="0.106"
+                app:layout_constraintWidth_percent=".7" />
+
+            <View
+                android:id="@+id/view2_cardreview"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+
+                android:background="@color/grey"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textview_service_content_cardreview"
+
+                app:layout_constraintVertical_bias="0.05"
+                app:layout_constraintWidth_percent=".6"
+                app:layout_constraintHorizontal_bias=".8"
+
+                />
+
+
+            <TextView
+                android:id="@+id/textview_experience_cardreview"
+                android:layout_width="@dimen/title_review"
+                android:layout_height="wrap_content"
+                android:text="Experience:"
+
+                android:textSize="@dimen/text_size_medium"
+                android:textStyle="bold"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/view2_cardreview"
+
+                app:layout_constraintVertical_bias=".1"
+                app:layout_constraintHorizontal_bias=".05"
+                />
+
+            <TextView
+                android:id="@+id/textview_experience_content_cardreview"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="descrizione di adjfeudsndfjwccn dfjdneffnfddfffjdfjddkskdnffnfisdjfnsdjd"
+
+                android:textSize="@dimen/text_size_small"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/textview_experience_cardreview"
+                app:layout_constraintTop_toBottomOf="@+id/view2_cardreview"
+
+                app:layout_constraintVertical_bias=".1"
+                app:layout_constraintHorizontal_bias=".5"
+                app:layout_constraintWidth_percent=".7"
+                />
+
+            <View
+                android:id="@+id/view3_cardreview"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+
+                android:background="@color/grey"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textview_experience_content_cardreview"
+
+                app:layout_constraintVertical_bias="0.05"
+                app:layout_constraintWidth_percent=".6"
+                app:layout_constraintHorizontal_bias=".8"
+
+                />
+
+
+            <TextView
+                android:id="@+id/textview_problem_cardreview"
+                android:layout_width="@dimen/title_review"
+                android:layout_height="wrap_content"
+                android:text="Problems:"
+
+                android:textSize="@dimen/text_size_medium"
+                android:textStyle="bold"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/view3_cardreview"
+
+                app:layout_constraintVertical_bias=".1"
+                app:layout_constraintHorizontal_bias=".05"
+                />
+
+            <TextView
+                android:id="@+id/textview_problem_content_cardreview"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="descrizione di adjfeudsndfjwccn dfjdneffnfddfffjdfjddkskdnffnfisdjfnsdjd"
+
+                android:textSize="@dimen/text_size_small"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/textview_problem_cardreview"
+                app:layout_constraintTop_toBottomOf="@+id/view3_cardreview"
+
+                app:layout_constraintVertical_bias=".1"
+                app:layout_constraintHorizontal_bias=".5"
+                app:layout_constraintWidth_percent=".7"
+                />
+
+            <View
+                android:id="@+id/view4_cardreview"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+
+                android:background="@color/grey"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textview_problem_content_cardreview"
+
+                app:layout_constraintVertical_bias="0.05"
+                app:layout_constraintWidth_percent=".6"
+                app:layout_constraintHorizontal_bias=".8"
+
+                />
+
+            <TextView
+                android:id="@+id/textview_load_less_cardreview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="LOAD LESS ..."
+
+                android:textSize="@dimen/text_size_medium"
+                android:textStyle="bold"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias=".5"
+
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/view4_cardreview"
+                app:layout_constraintVertical_bias=".1"
+                android:padding="20dp"
+                />
+
+
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
