--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -94,6 +94,17 @@
     <item name="checkedIcon">@drawable/ic_mtrl_chip_checked_black</item>
   </style>
 
+    <style name="RatingBar" parent="Theme.AppCompat">
+        <item name="colorControlNormal">@color/grey</item>
+        <item name="colorControlActivated">@color/yellow_star</item>
+    </style>
+
+    <style name="RatingBar_small"
+        parent="android:style/Widget.Material.RatingBar.Small">
+        <item name="colorControlNormal">@color/grey</item>
+        <item name="colorControlActivated">@color/yellow_star</item>
+    </style>
+
 
 
 
