--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -6,13 +6,57 @@
     android:layout_height="match_parent"
     tools:context=".review.Activity_Review">
 
+    <com.google.android.material.bottomappbar.BottomAppBar
+        android:id="@+id/appbar_activity_review_client"
+        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="16dp"
+        tools:ignore="BottomAppBar" >
+
+        <ImageView
+            android:layout_width="@dimen/icon_appBar"
+            android:layout_height="@dimen/icon_appBar"
+            android:id="@+id/arrow_back_review_client"
+            android:src="@drawable/ic_baseline_arrow_back_24"/>
+    </com.google.android.material.bottomappbar.BottomAppBar>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_create_review"
+        style="@style/main_button_style"
+
+
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/create_review"
+
+        app:cornerRadius="@dimen/button_radius"
+        app:icon="@drawable/ic_baseline_add_box_24"
+
+        app:iconGravity="textStart"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        app:layout_constraintVertical_bias="0.99"
+        app:layout_constraintWidth_percent=".8"
+        android:visibility="gone"
+        />
+
+
     <fragment
         android:id="@+id/fragment_reviews_list"
         android:name="com.poma.restaurant.review.Fragment_Reviews_List"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/appbar_activity_review_client"
+
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
