--- a/app/src/main/res/layout/fragment_restaurant_client.xml
+++ b/app/src/main/res/layout/fragment_restaurant_client.xml
@@ -361,6 +361,48 @@
                 app:rippleColor="@color/yellow_star"
                 app:srcCompat="@drawable/ic_baseline_star_24"
                 />
+
+            <TextView
+                android:id="@+id/textview_reviews_fragment_restaurant"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="Reviews: "
+
+                android:textAlignment="center"
+                android:textSize="@dimen/text_size_small"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textview_tag3_fragment_restaurant"
+                app:layout_constraintVertical_bias=".1"
+                app:layout_constraintHorizontal_bias=".1"
+                tools:ignore="MissingConstraints" />
+            <TextView
+                android:id="@+id/textview_reviews_link_fragment_restaurant"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="0"
+                android:textColor="@color/blue_link"
+                android:textStyle="bold"
+
+                android:paddingBottom="20dp"
+                android:paddingEnd="20dp"
+
+
+
+
+                android:textSize="@dimen/text_size_small"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/textview_reviews_fragment_restaurant"
+                app:layout_constraintTop_toBottomOf="@+id/textview_tag3_fragment_restaurant"
+                app:layout_constraintVertical_bias=".1"
+                app:layout_constraintHorizontal_bias=".05"
+                tools:ignore="MissingConstraints" />
+
+
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/floatingActionButton_removefavourite_fragment_restaurant"
                 android:layout_width="wrap_content"
