--- a/app/src/main/res/layout/fragment_reviews_list.xml
+++ b/app/src/main/res/layout/fragment_reviews_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,10 +8,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RV_fragment_review"
-
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        tools:listitem="@layout/card_review"
+        android:paddingBottom="100dp"
+        />
 
-        tools:listitem="@layout/card_review" />
+</androidx.constraintlayout.widget.ConstraintLayout>
 
-</ScrollView>
+
